--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.7.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "@alpinejs/sort": "^3.14.1",
+        "@tailwindcss/forms": "^0.5.6",
+        "@tailwindcss/typography": "^0.5.9",
+        "autoprefixer": "^10.4.15",
+        "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.29",
+        "tailwindcss": "^3.3.3",
+        "vite": "^5.0.0"
     }
 }
